[package]
name = "otel-otel"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
tokio = { version = "1.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
opentelemetry_sdk = { version = "0.24.1", features = ["rt-tokio"] }
opentelemetry = "0.24.0"
opentelemetry-stdout = "0.5.0"
opentelemetry-otlp = { version = "0.17.0" }
serde_json = "1.0.128"
futures-executor = "0.3"
rand = "0.8"

[dependencies.uuid]
version = "1.10.0"
features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
